@@ -1,22 +1,34 @@
 body, table, div, p, dl {
-	font-family: Lucida Grande, Verdana, Geneva, Arial, sans-serif;
-	font-size: 12px;
+    font-family: Lucida Grande, Verdana, Geneva, Arial, sans-serif;
+    font-size: 12px;
 }
 
 /* @group Heading Levels */
 
 h1 {
-	text-align: center;
-	font-size: 150%;
+    text-align: center;
+    font-size: 150%;
+    font-variant: small-caps;
 }
 
 h2 {
-	font-size: 120%;
+    font-size: 120%;
 }
 
 h3 {
-	font-size: 100%;
+    font-size: 100%;
 }
+
+h4 {
+    color: #3C9A35;
+}
+h2, h3, hr {
+    font-variant: small-caps;
+    color:#0066CC;
+}
+
+
+
 
 /* @end */
 
@@ -44,13 +56,13 @@ div.navtab {
 /* @group Link Styling */
 
 a {
-	color: #153788;
-	font-weight: normal;
+	color: #0066CC;
+	font-weight: bolder;
 	text-decoration: none;
 }
 
 .contents a:visited {
-	color: #1b77c5;
+	color: #3C9A35;
 }
 
 a:hover {
@@ -438,4 +450,8 @@ proper pixel height of your image.
 address {
 	font-style: normal;
 	color: #333;
+}
+
+a.anchor {
+	text-decoration: none;
 }
