@@ -1,4 +1,2 @@
-<hr size="1"><address style="text-align: right;"><small>
-Generated on $datetime for $projectname by&nbsp;<a href="http://www.doxygen.org/index.html"><img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> $doxygenversion</small></address>
 </body>
 </html>
